welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:5: error: not found: type int
	var actuel:int = 1;
                   ^